ingress/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: anisa-svc
spec:
  selector:
    app: my-fpm
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
