ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fpm-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: cka.anisa.co.ir
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: anisa-svc
                port:
                  number: 80
